tests/invalid/Export_Invalid_1.whiley

export function f(int x) -> int:
    return x + 2

export function f(int[] x) -> int:
    return |x| + 2
